--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#007AFF</color>
@@ -17,4 +12,8 @@
     <color name="primary">#F7F6F2</color>
     <color name="light_gray">#D3D3D3</color>
     <color name="light_blue">#039BE5</color>
+    <color name="gray_light">#48484A</color>
+    <color name="elevated">#3C3C3F</color>
+    <color name="secnodary_dark">#252528</color>
+    <color name="dark">#FF000000</color>
 </resources>
